--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <title>Giphy Moods</title>
+    <title>Sneakers</title>
 </head>
 <body>
-<div class="main-container">
-    <div class="row">
-        <div class="col-md-12">
-          <h1 class="main-header">Giphy Game</h1>          
-        </div>
-    </div>
-
-
-</div>
-
+        <div class="container" style="background: transparent;">
+                <h1 class="text-center">Sneaker Zone</h1>
+                <br>
+                <br>
+                <div id="sneaker-buttons"> </div>
+                <br>
+                <br>
+                <div class="container" id="btn" style="background: transparent;">
+                    <form id="sneaker-form">
+                        <label id="add" for="sneaker-input">Type in your favortie sneaker brand and click submit!</label>
+                        <input type="text" class="form-control" id="sneaker-input">
+                        <br>
+                        <br>
+                    </form>
+                    <button onclick="submitButtonClicked()" type="button" id="add-sneaker" class="btn btn-success">Submit</button>
+                    <br>
+                    <br>
+                    <div id="sneakers"> </div>
+                </div>
+            </div>
+        
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="./assets/js/logic.js"></script>
 </body>
